--- a/portworx-helm/templates/hooks/pre-delete/px-predelete-nodelabel.yaml
+++ b/portworx-helm/templates/hooks/pre-delete/px-predelete-nodelabel.yaml
@@ -1,26 +1,28 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: px-postdelete-hook
+  namespace: kube-system
+  name: px-predelete-nodelabel
   labels:
     heritage: {{.Release.Service | quote }}
     release: {{.Release.Name | quote }}
     chart: "{{.Chart.Name}}-{{.Chart.Version}}"
   annotations:
-    "helm.sh/hook": post-delete
+    "helm.sh/hook": pre-delete
     "helm.sh/hook-weight": "-5"
-    "helm.sh/hook-delete-policy": hook-succeeded, hook-failed
+    "helm.sh/hook-delete-policy": hook-succeeded
 spec:
   backoffLimit: 1
   template:
     spec:
+      serviceAccountName: px-delete-account
       restartPolicy: OnFailure
       volumes:
       - name: kubectl
         hostPath:
           path: /usr/bin/kubectl
       containers:
-      - name: post-delete-job
+      - name: pre-delete-job
         image: "lachlanevenson/k8s-kubectl:{{ .Capabilities.KubeVersion.GitVersion }}"
         volumeMounts:
         - name: kubectl
@@ -28,4 +30,4 @@ spec:
         command:
         - sh
         - -c
-        - "kubectl label nodes --all px/enabled-"
+        - "kubectl label nodes --all px/enabled=remove --overwrite"
