--- a/portworx-helm/templates/portworx-ds.yaml
+++ b/portworx-helm/templates/portworx-ds.yaml
@@ -148,14 +148,14 @@ spec:
           env:
             - name: "PX_TEMPLATE_VERSION"
               value: "v2"
-              
               {{- if not (eq $envVars "none") }}
-              {{ $vars := $envVars | split "," }}
-              {{- range $name, $val := $vars }}
-            - name: {{ $name }}
-              value: {{ $val }}
-              {{- end -}}              
-
+              {{- $vars := $envVars | split ":" }}
+              {{- range $key, $val := $vars }}
+              {{-  $envVariable := $val | split "=" -}}
+            - name: {{ $envVariable._0 | quote }}
+              value: {{ $envVariable._1 | quote }}
+              {{- end -}}
+              {{- end }}
           livenessProbe:
             periodSeconds: 30
             initialDelaySeconds: 840 # allow image pull in slow networks
@@ -182,8 +182,13 @@ spec:
           volumeMounts:
             - name: dockersock
               mountPath: /var/run/docker.sock
+          {{- if (.Values.openshiftInstall) and (eq .Values.openshiftInstall true)}}
+            - name: kubelet
+              mountPath: /var/lib/origin/openshift.local.volumes:shared
+          {{- else }}
             - name: kubelet
               mountPath: /var/lib/kubelet:shared
+          {{- end }}
             - name: libosd
               mountPath: /var/lib/osd:shared
             - name: etcpwx
@@ -217,9 +222,15 @@ spec:
         - name: dockersock
           hostPath:
             path: /var/run/docker.sock
+          {{- if (.Values.openshiftInstall) and (eq .Values.openshiftInstall true)}}
+        - name: kubelet
+          hostPath:
+            path: /var/lib/origin/openshift.local.volumes:shared
+          {{- else }}
         - name: kubelet
           hostPath:
             path: /var/lib/kubelet
+          {{- end }}
         - name: libosd
           hostPath:
             path: /var/lib/osd
