--- a/portworx-helm/templates/hooks/pre-delete/px-predelete-nodelabel.yaml
+++ b/portworx-helm/templates/hooks/pre-delete/px-predelete-nodelabel.yaml
@@ -15,7 +15,7 @@ spec:
   backoffLimit: 1
   template:
     spec:
-      serviceAccountName: px-delete-account
+      serviceAccountName: tiller
       restartPolicy: OnFailure
       volumes:
       - name: kubectl
