--- a/portworx-helm/templates/portworx-oc.yaml
+++ b/portworx-helm/templates/portworx-oc.yaml
@@ -96,7 +96,7 @@ spec:
         - --controllers=persistentvolume-binder
         - --use-service-account-credentials=true
         - --leader-elect-resource-lock=configmaps
-        image: gcr.io/google_containers/kube-controller-manager-amd64:{{ .Capabilities.KubeVersion.GitVersion }}
+        image: gcr.io/google_containers/kube-controller-manager-amd64:{{ template "px.kubernetesVersion" . }}
         livenessProbe:
           failureThreshold: 8
           httpGet:
