--- a/portworx-helm/templates/hooks/pre-install/etcd-preinstall-hook.yaml
+++ b/portworx-helm/templates/hooks/pre-install/etcd-preinstall-hook.yaml
@@ -10,7 +10,7 @@ metadata:
   annotations:
     "helm.sh/hook": pre-install
     "helm.sh/hook-weight": "-5"
-    "helm.sh/hook-delete-policy": hook-succeeded, hook-failed
+    "helm.sh/hook-delete-policy": hook-succeeded
 spec:
   backoffLimit: 1
   template:
