--- a/portworx-helm/templates/hooks/post-install/px-postinstall-status.yaml
+++ b/portworx-helm/templates/hooks/post-install/px-postinstall-status.yaml
@@ -12,11 +12,11 @@ metadata:
     "helm.sh/hook-weight": "-5"
     "helm.sh/hook-delete-policy": hook-succeeded
 spec:
-  backoffLimit: 1
+  backoffLimit: 0
   template:
     spec:
       serviceAccountName: tiller
-      restartPolicy: OnFailure
+      restartPolicy: Never
       containers:
       - name: post-install-status-job
         terminationMessagePath: '/dev/termination-log'    
