--- a/portworx-helm/templates/hooks/post-delete/px-postdelete-unlabelnode.yaml
+++ b/portworx-helm/templates/hooks/post-delete/px-postdelete-unlabelnode.yaml
@@ -2,7 +2,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   namespace: kube-system
-  name: px-postdelete-unlabelnode-{{ .Release.Name }}
+  name: px-postdelete-unlabelnode
   labels:
     heritage: {{.Release.Service | quote }}
     release: {{.Release.Name | quote }}
@@ -16,7 +16,7 @@ spec:
   template:
     spec:
       serviceAccountName: tiller
-      restartPolicy: OnFailure
+      restartPolicy: Never
       containers:
       - name: post-delete-job
         image: "lachlanevenson/k8s-kubectl:{{ template "px.kubernetesVersion" . }}"
