--- a/portworx-helm/templates/hooks/post-install/px-postinstall-status.yaml
+++ b/portworx-helm/templates/hooks/post-install/px-postinstall-status.yaml
@@ -2,7 +2,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   namespace: kube-system
-  name: px-postinstall-status-{{ .Release.Name }}
+  name: px-postinstall-status
   labels:
     heritage: {{.Release.Service | quote }}
     release: {{.Release.Name | quote }}
