--- a/portworx-helm/templates/hooks/pre-install/etcd-preinstall-hook.yaml
+++ b/portworx-helm/templates/hooks/pre-install/etcd-preinstall-hook.yaml
@@ -2,7 +2,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   namespace: kube-system
-  name: px-etcd-preinstall-hook-{{ .Release.Name }}
+  name: px-hook-etcd-preinstall
   labels:
     heritage: {{.Release.Service | quote }}
     release: {{.Release.Name | quote }}
