--- a/portworx-helm/templates/portworx-ds.yaml
+++ b/portworx-helm/templates/portworx-ds.yaml
@@ -8,6 +8,7 @@
 {{- $managementInterface := .Values.managementInterface | default "none" }}
 
 {{- $envVars := .Values.envVars | default "none" }}
+{{- $isCoreOS := .Values.isTargetOSCoreOS | default false }}
 
 {{- $etcdCredentials := .Values.etcd.credentials | default "none:none" }}
 {{- $etcdCA := .Values.etcd.ca | default "none" }}
@@ -89,7 +90,7 @@ spec:
               {{- end -}}              
   
               "-k", 
-              "{{ required "A valid ETCD url in the format etcd:http://<your-etcd-endpoint>:2379 is required" .etcdEndPoint }}", 
+              "{{ required "A valid ETCD url in the format etcd:http://<your-etcd-endpoint> is required" .etcdEndPoint }}", 
               "-c", 
               "{{ required "Clustername cannot be empty" .clusterName }}", 
 
@@ -201,8 +202,13 @@ spec:
               mountPath: /dev
             - name: cores
               mountPath: /var/cores
+          {{- if eq $isCoreOS true}}
+            - name: src
+              mountPath: /lib/modules
+          {{- else -}}
             - name: src
               mountPath: /usr/src
+          {{- end -}}
             - name: dockerplugins
               mountPath: /run/docker/plugins
             - name: hostproc
@@ -251,9 +257,15 @@ spec:
         - name: cores
           hostPath:
             path: /var/cores
+        {{- if eq $isCoreOS true}}
+        - name: src
+          hostPath:
+            path: /lib/modules
+        {{- else -}}
         - name: src
           hostPath:
             path: /usr/src
+        {{- end -}}
         - name: dockerplugins
           hostPath:
             path: /run/docker/plugins
