Fix typo in the template

--- a/portworx-helm/templates/portworx-stork.yaml
+++ b/portworx-helm/templates/portworx-stork.yaml
@@ -13,7 +13,7 @@ data:
       "predicates": [
 {{- if ge .Capabilities.KubeVersion.Minor "9" -}}
         {"name": "NoVolumeZoneConflict"}, 
-{{- end -s}}
+{{- end -}}
         {"name": "MaxAzureDiskVolumeCount"},
         {"name": "NoVolumeNodeConflict"},
         {"name": "PodToleratesNodeTaints"},
