--- a/portworx-helm/templates/portworx-stork.yaml
+++ b/portworx-helm/templates/portworx-stork.yaml
@@ -11,9 +11,9 @@ data:
       "kind": "Policy",
       "apiVersion": "v1",
       "predicates": [
-{{- if ge .Capabilities.KubeVersion.Minor "9" -}}
+{{ if ge .Capabilities.KubeVersion.Minor "9" -}}
         {"name": "NoVolumeZoneConflict"}, 
-{{- end -}}
+{{ end -}}
         {"name": "MaxAzureDiskVolumeCount"},
         {"name": "NoVolumeNodeConflict"},
         {"name": "PodToleratesNodeTaints"},
