Allow etcd URL without http as well

--- a/hooks/postinstall-hook-px/Dockerfile
+++ b/hooks/postinstall-hook-px/Dockerfile
@@ -5,6 +5,7 @@ MAINTAINER hrishikesh.deodhar@gmail.com
 RUN apk update \
  && apk add --update curl \
  && apk add jq \
+ && apk add --update bash \
  && rm -rf /var/cache/apk/*
 
 COPY pxStatus.sh /usr/bin
