--- a/hooks/preinstall-hook-px/Dockerfile
+++ b/hooks/preinstall-hook-px/Dockerfile
@@ -5,7 +5,10 @@ MAINTAINER hrishikesh.deodhar@gmail.com
 RUN apk update \
  && apk add --update curl \
  && apk add jq \
+ && apk add --update bash \
  && rm -rf /var/cache/apk/*
 
 COPY etcdStatus.sh /usr/bin
 
+ENTRYPOINT ["etcdStatus.sh"]
+CMD [ ]
